# sentinel-eval

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: DEV_GETTING_STARTED.md  USER_STORIES.md
docs/adr/: 0001-standalone-module.md
docs/journal/: sentinel-eval-2026-07-03T1844-offline-harness-scaffold.md  sentinel-eval-2026-07-04T0819-sentinel-l7-adapter.md  sentinel-eval-2026-07-04T1450-consistency-layer.md  sentinel-eval-2026-07-04T1626-disagreement-layer.md  sentinel-eval-2026-07-04T1720-ground-truth-export-and-judge-validation.md
docs/probes/: sentinel-eval-2026-07-03T1844-offline-harness-scaffold.md  sentinel-eval-2026-07-04T0819-sentinel-l7-adapter.md  sentinel-eval-2026-07-04T1450-consistency-layer.md  sentinel-eval-2026-07-04T1626-disagreement-layer.md  sentinel-eval-2026-07-04T1720-ground-truth-export-and-judge-validation.md
src/arbiter_l8/: __init__.py
src/arbiter_l8/observability/: metrics.py
src/sentinel_eval/: __init__.py  config.py  harness.py  models.py
src/sentinel_eval/adapters/: sentinel_l7.py
src/sentinel_eval/online/: __init__.py  consistency.py  disagreement.py  heuristics.py  judge.py
tests/: test_config.py  test_consistency.py  test_disagreement.py  test_disagreement_stub.py  test_harness.py  test_pipeline.py  test_sentinel_l7_adapter.py
tests/fixtures/: compliance_dataset.json  sentinel_l7_ground_truth.json
